--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,22 @@
-<h1 class="ml-5">asdfasdf</h1>
+<!-- <mat-form-field appearance="legacy">
+
+    <mat-label>Choose Date Range</mat-label>
+  
+    <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRange">
+      <input matStartDate formControlName="start" placeholder="Start Date">
+      <input matEndDate formControlName="end" placeholder="End Date">
+    </mat-date-range-input>
+  
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  
+    <mat-date-range-picker #picker></mat-date-range-picker>
+  
+  </mat-form-field>
+
+  <h2>
+    Start: {{dateRange.value.start | date}}
+    End: {{dateRange.value.end | date}}
+  </h2> -->
+
+
 <router-outlet></router-outlet>
