--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,46 @@
 <div class="container">
-    <h1 class="text-center">{{title}}</h1>
+    <h1 class="text-center p-3">{{title}}</h1>
 
-    <div class="row mt-2 border rounded border-dark p-0 pt-3 pb-0">
+    <div class="row mt-2 border-0 rounded border-dark p-0 pt-2 pb-2 mb-3 bg-info">
+
+        <!-- <div class="form-group row col text-center">
+            <label for="von" class="col-sm-2 col-form-label">Von</label>
+            <div class="input-group">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="von" id="von" ngbDatepicker>
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              </div>
+            </div>
+          </div> -->
+
         <div class="form-group row col text-center">
             <label for="von" class="col-sm-2 col-form-label">Von</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="von" placeholder="Von">
+                <!-- <input type="text" class="form-control" id="von" placeholder="Von"> -->
+                <input id="von" type="date"class="form-control">
             </div>
         </div>
         <div class="form-group row col text-center ">
             <label for="bis" class="col-sm-2 col-form-label">Bis</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="bis" placeholder="Bis">
+                <!-- <input type="text" class="form-control" id="bis" placeholder="Bis"> -->
+                <input id="bis" type="date"class="form-control">
             </div>
         </div>
-        <div class="col text-right">
-            <button type="button" class="btn btn-primary w-25">Suchen</button>
+        <div class="col text-center">
+            <button type="button" class="btn btn-danger w-25">Suchen</button>
         </div>
     </div>
     <div class="row card-wrapper">
         <div *ngFor="let car of cars" class="col-md-6 col-xl-3">
-            <div class="card m-b-30 border">
+            
+            <div class="card m-b-30 border mb-4">
                 <div class="card-body row">
                     <div class="col-12">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt=""
+                        <a (click)="bookcar($event, car)">
+                            <img src="./assets/img/{{car.imageName}}.jpg" alt="" 
                             class="img-fluid w-60 center">
+                        </a>
                     </div>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -43,6 +59,8 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
     </div>
 </div>
