--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,39 @@
-<p>navbar works!</p>
+
+<!-- Just an image -->
+<nav class="navbar navbar-light navbar-expand-lg row">
+
+    <div class="col">
+        <a class="navbar-brand ml-1" href="#">
+           <img src="./assets/img/logo_fuma.svg" width="40px" alt="">
+        </a>
+    </div>
+
+    <div class="col">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+                
+        <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarTogglerDemo03">
+            <ul class="nav navbar-nav mt-2 mt-lg-0 ml-auto d-flex flex-row-reverse">
+                <li class="nav-item active">
+                    <button type="button" class="btn btn-warning mr-3" style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;" >
+                        log out
+                    </button>
+                    <!-- <div class="text-info">
+                        Wellcome to Fuhrpark!
+                    </div> -->
+                    <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li> -->
+                <!-- <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li> -->
+            </ul>
+        </div>
+
+    </div>
+    
+</nav>
