--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="container">
+    
     <app-navbar></app-navbar>
-    <h1 class="text-center p-3">{{title}}</h1>
+    <!-- <h1 class="text-center p-3">{{title}}</h1> -->
 
     <div class="row mt-2 p-0 pt-2 pb-2 mb-3" style="border: 2px solid black; border-radius: 13px;" >
 
@@ -18,18 +19,21 @@
             <label for="von" class="col-sm-2 col-form-label">Von</label>
             <div class="col-sm-10">
                 <!-- <input type="text" class="form-control" id="von" placeholder="Von"> -->
-                <input id="von" type="date"class="form-control">
+                <input id="von" type="date"class="form-control mt-1"
+                style="border-radius: 18px; padding: 3px 16px 3px 16px;">
             </div>
         </div>
         <div class="form-group row col text-center ">
             <label for="bis" class="col-sm-2 col-form-label">Bis</label>
             <div class="col-sm-10">
                 <!-- <input type="text" class="form-control" id="bis" placeholder="Bis"> -->
-                <input id="bis" type="date"class="form-control">
+                <input id="bis" type="date"class="form-control mt-1"
+                style="border-radius: 18px; padding: 3px 16px 3px 16px;">
             </div>
         </div>
         <div class="col text-center">
-            <button type="button" class="btn btn-danger w-25">Suchen</button>
+            <button type="button" class="btn btn-danger w-25 mt-1 mr-2"
+            style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;">Suchen</button>
         </div>
     </div>
     <div class="row card-wrapper pt-4">
@@ -55,7 +59,7 @@
                             License Plate : {{car.licensePlate}}
                         </div>
                         <div class="">
-                            <button type="button" class="" 
+                            <button type="button" class="" (click)="bookcar($event, car)"
                             [ngClass]= "{'border-danger text-danger' :car.used == true, 'border-info text-primary' :car.used == false}"
                             style="float:right; border-radius: 18px; border: 1px solid darkgray; padding: 3px 16px 3px 16px;" >
                                 {{car.used == true ? "in nutzung": "verfügbar" | titlecase}}
