--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,20 +17,21 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarTogglerDemo03">
             <ul class="nav navbar-nav mt-2 mt-lg-0 ml-auto d-flex flex-row-reverse">
                 <li class="nav-item active">
-                    <button type="button" class="btn btn-warning mr-3" style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;" >
+                    <button type="button" (click)="logOut()" class="btn btn-warning" style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;" >
                         log out
                     </button>
                     <!-- <div class="text-info">
                         Wellcome to Fuhrpark!
                     </div> -->
-                    <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
                 </li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <div class="row">
+                        <a class="nav-link col" href="#">en</a>
+                        <a class="nav-link col" href="#">de</a>
+                        <a class="nav-link col" href="#">es</a>
+                    </div>
                 </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li> -->
+                
             </ul>
         </div>
 
