--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,13 +19,13 @@
                             <b>
                                 <label for="login" class="pb-1 h5">{{"user"|titlecase}}</label>
                             </b>
-                            <input class="form-control" type="text" #login placeholder="{{'Email or UserName'}}">
+                            <input class="form-control" type="text" [(ngModel)]="user" name="user" placeholder="{{'Email or UserName'}}">
                         </div>
                         <div class="form-group pb-2">
                             <b>
                                 <label for="password" class="pb-1 h5">{{"password"|titlecase}}</label>
                             </b>
-                            <input  class="form-control" type="password" #password placeholder="{{'password'|titlecase}}"> 
+                            <input  class="form-control" type="password" [(ngModel)]="password" name="password" placeholder="{{'password'|titlecase}}"> 
                         </div>
                         <!-- <hr> -->
                         <div class="form-group pt-4">
