--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <router-outlet></router-outlet>
+<!-- <app-toasts aria-live="polite" class="" style="top:75px" aria-atomic="true"></app-toasts> -->
+
