--- a/src/app/components/car-card/car-card.component.html
+++ b/src/app/components/car-card/car-card.component.html
@@ -2,7 +2,7 @@
     <div class="card-body row p-0 m-0">
         <div class="col-12 p-0">
             <a (click)="goToBookcar($event, car)" class="p-0 m-0">
-                <img src="./assets/img/{{car.imageName}}.jpg" alt="" class="img-fluid center"
+                <img src="./assets/img/cars/{{car.carId}}.jpg" alt="" class="img-fluid center"
                 style="border-top-left-radius: 18px; border-top-right-radius: 18px;">
                 <!-- <img src="./assets/img/ferrari.jpg" alt="" class="img-fluid center"  -->
                 <!-- style="border-top-left-radius: 18px; border-top-right-radius: 18px;"> -->
