--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarTogglerDemo03">
             <ul class="nav navbar-nav mt-2 mt-lg-0 ml-auto d-flex flex-row-reverse">
                 <li class="nav-item active">
-                    <button type="button" (click)="logOut()" class="btn btn-warning" style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;" >
+                    <button type="button" *ngIf="_auth.isLogin" (click)="logOut()" class="btn btn-warning" style="float:right; border-radius: 18px; padding: 3px 16px 3px 16px;" >
                         log out
                     </button>
                     <!-- <div class="text-info">
