--- a/src/app/pages/bookcar/bookcar.component.html
+++ b/src/app/pages/bookcar/bookcar.component.html
@@ -6,7 +6,8 @@
 
         <div class="col-8">
             <div class="border p-0" style="border-radius: 18px;">
-                <div class="h3 text-center p-4 m-0" style="background-color: #99a0d1; border-top-left-radius: 18px; border-top-right-radius: 18px;">
+                <div class="h3 text-center p-4 m-0 shadow" 
+                style="background-color: #99a0d1; border-radius: 18px;">
                     {{"select period"|titlecase}}
                 </div>
                 <div class="row d-flex text-center m-0">
