--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@
     <div class="row card-wrapper pt-4">
         <div *ngFor="let car of cars" class="col-md-6 col-xl-3">
 
-            <app-car-card [car]=car></app-car-card>
+            <app-car-card [car]=car [dateRange]="{fromDate: from, toDate: to}"></app-car-card>
 
         </div>
     </div>
